--- a/wp-content/themes/cerro-grande/style.css
+++ b/wp-content/themes/cerro-grande/style.css
@@ -183,8 +183,7 @@ h3.heading {
 
 .followUp-table th, .table-header,
 .followUp-table td,
-.followUp-table-view th,
-.followUp-table-view td {
+.followUp-table-view th {
     padding: 5px;
 }
 
@@ -242,6 +241,10 @@ h3.heading {
     height: 120px;
     width: 100%;
     border-right: 0;
+    padding-left: 15px;
+    outline: none;
+    color: #000!important;
+    font-weight: 600;
 }
 
 .followUp-table th:first-child {
@@ -256,9 +259,22 @@ h3.heading {
 .followUp-table td, .followUp-table-view td {
     color: #181818;
     font-weight: 600;
-    padding-left: 15px;
     border: 1px solid #626262;
     border-top: 0;
+}
+
+.followUp-table-view th,
+.followUp-table td {
+    padding-left: 15px;
+}
+
+.followUp-table-view td input,
+.followUp-table-view td select {
+    border-radius: 0;
+    border: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top: 1px solid #626262;
 }
 
 .followUp-table a {
@@ -282,8 +298,9 @@ h3.heading {
 }
 
 .seguimiento input[type=submit],
-.login-modal input[type=submit] {
-    margin: 0;
+.login-modal input[type=submit],
+.registro input[type=submit] {
+    margin: 0 auto;
     background-color: #3aaa35;
     color: #fff;
     font-size: 18px;
@@ -294,7 +311,8 @@ h3.heading {
 }
 
 .seguimiento input[type=submit]:hover,
-.login-modal input[type=submit]:hover {
+.login-modal input[type=submit]:hover,
+.registro input[type=submit]:hover {
     background-color: #34952f;
 }
 
@@ -1350,6 +1368,8 @@ footer {
 .login-modal input[type=password] {
     border: 1px solid #9c1006;
     border-radius: 0;
+    height: 50px;
+    margin-bottom: 10px!important;
 }
 
 .login-modal input[type=submit] {
@@ -1439,17 +1459,34 @@ footer {
     margin: 0;
 }
 
-.form-container input[type="text"], .form-container select, .select2, .blue-input, #respond textarea, .woocommerce-billing-fields input[type=text], .woocommerce-billing-fields input[type=email], .woocommerce-billing-fields select, .woocommerce-billing-fields input[type=tel],
-.login-username input, .login-password input, .input-blue {
-    font-size: 14px;
-    color: #979797;
+.form-container input[type="text"], .form-container select, .select2,
+.respond textarea, .login-modal input[type=text], .login-modal input[type=password] {
     width: 100%;
-    border: 1px solid rgba(0, 168, 231, 0.94);
-    border-radius: 5px;
-    min-height: 55px;
     padding-left: 15px;
     outline: none;
+}
+
+.form-container:not(#registro) hr {
+    margin: 0;
+    margin-left: 15px;
+    margin-right: 15px;
     margin-bottom: 30px;
+}
+
+.registro hr {
+    border-top: 1px solid #626262;
+}
+
+
+.registro input[type=text], .registro input[type=email]
+.registro input[type=tel], .registro textarea, .select2,
+.registro select {
+    width: 100%;
+    padding-left: 15px;
+    outline: none;
+    border: 1px solid #626262;
+    min-height: 60px;
+    font-weight: 600;
 }
 
 .select2 {
@@ -1472,10 +1509,6 @@ footer {
     height: 55px!important;
 }
 
-.marca-margin {
-    margin-top: 40px;
-}
-
 .form-container .inputfile {
     width: 0.1px;
     height: 0.1px;
@@ -1496,15 +1529,14 @@ footer {
 }
 
 .form-container .inputfile + label {
-    font-size: 14px;
-    color: #979797;
-    line-height: 54px;
+    line-height: 60px;
     display: inline-block;
     width: 100%;
-    height: 54px;
+    height: 60px;
     background-color: #fff;
-    border-radius: 5px;
-    border: 1px solid #00a8e7;
+    border: 1px solid #626262;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     pointer-events: none;
 }
 
@@ -1513,31 +1545,26 @@ footer {
     background: url(img/icons/attach.png) no-repeat center center;
     content: "";
     width: 50px;
-    height: 54px;
+    height: 60px;
     position: absolute;
     margin-top: -1px;
     right: 15px;
     border-radius: 0 5px 5px 0;
     display: inline-block;
-    background-color: #00a8e7;
+    background-color: #9c1006;
     cursor: pointer;
 }
 
 .form-container .inputfile:hover + label:after {
-    background-color: #0094cb!important;
+    background-color: #890f06!important;
 }
 
-.form-container label {
-    font-size: 14px;
-    color: #979797;
+.table-cell .inputfile + label {
+    border-left: 0;
 }
 
-.form-container hr {
-    border-bottom: 1px solid #00a8e7;
-    margin: 0;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 30px;
+.table-cell .inputfile + label:after {
+    right: 0;
 }
 
 .form-container .terms {
