--- a/wp-content/themes/cerro-grande/style.css
+++ b/wp-content/themes/cerro-grande/style.css
@@ -321,13 +321,23 @@ h3.heading {
     text-align: right;
 }
 
-.flag-icon-background {
+.main-nav li.flag {
+    width: 100%;
+}
+
+.navbar li.flag .flag-icon-background {
     position: absolute;
-    top: 15px;
-    right: 15px;
-    width: 45px;
-    height: 45px;
-    z-index: 99998;
+    left: 0;
+    right: 0;
+}
+
+.flag-icon-background {
+    width: 30px;
+    height: 30px!important;
+}
+
+.flag-icon-background:after {
+    display: none!important;
 }
 
 /* PRE-LOADER */
@@ -481,7 +491,7 @@ h3.heading {
     margin: 0!important;
 }
 
-.main-nav .navbar-nav>li {
+.main-nav .navbar-nav>li:not(.flag) {
     width: 100%;
     padding: 12px 0;
 }
@@ -1398,8 +1408,8 @@ footer {
     background: #fff;
     border-radius: 5px;
     min-height: 200px;
-    padding-left: 30px!important;
-    padding-right: 30px!important;
+    /*padding-left: 30px!important;
+    padding-right: 30px!important;*/
     display: none;
 }
 
@@ -1485,7 +1495,6 @@ footer {
 .registro hr {
     border-top: 1px solid #626262;
 }
-
 
 .registro input[type=text], .registro input[type=email]
 .registro input[type=tel], .registro textarea, .select2,
@@ -1621,6 +1630,10 @@ footer {
     color: #181818;
     font-weight: 600;
     text-align: center;
+}
+
+.seguimiento.user-view .followUp-table-view td {
+    padding: 10px;
 }
 
 #productSelect {
@@ -1889,11 +1902,10 @@ font-size: 18px;
 }
 
 @media(max-width: 767px) {
-    .flag-icon-background {
-        top: 5px;
-        right: 5px;
-        width: 38px;
-        height: 38px;
+    .navbar li.flag .flag-icon-background {
+        position: relative;
+        transform: none;
+        top: 0;
     }
     /***SETTING ANIMATIONS***/
     #section7 .heading,
@@ -1948,6 +1960,10 @@ font-size: 18px;
     .navbar .navbar-brand {
         width: 160px;
         height: 50px;
+    }
+    .navbar .navbar-collapse {
+        border: 0;
+        box-shadow: none;
     }
     .navbar .navbar-nav {
         display: block;
